- Fixed bug #21306 (catch bailouts of write handler during RSHUTDOWN)